build/js/components/requirejs/tests/error/d.js
define(["b"],function(e){return{name:"d",b:e}});